# rob6_lego

./: README.md
cal_station/: CMakeLists.txt  package.xml  urdf.rviz
cal_station/config/: joint_names_cal_station.yaml
cal_station/launch/: display.launch  gazebo.launch
cal_station/meshes/: Arm.STL  Base.STL  Mount.STL
cal_station/urdf/: cal_station.csv  cal_station.urdf  cal_station.urdf.xacro  placeholder.urdf
commander/: CMakeLists.txt  package.xml
commander/include/: lego_actionlib.h  lego_tf_tracker.h
commander/launch/: bringup.launch  control.launch  data_extractor.launch
commander/msg/: PoseTCP.msg
commander/src/: contol2.cpp  control.cpp  data_extractor.cpp  pose_finder.cpp  tf_sim.cpp  tf_sub2.cpp
lego_moveit/: .setup_assistant  CMakeLists.txt  package.xml
lego_moveit/config/: joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  sensors_3d.yaml  ur5.srdf
lego_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  execute.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_moveit_controller_manager.launch.xml  warehouse.launch
lego_robot_description/: CMakeLists.txt  package.xml  urdf.rviz
lego_robot_description/config/: joint_names_lego_robot_description.yaml
lego_robot_description/launch/: display.launch  upload.launch
lego_robot_description/meshes/gripper/: ee2.STL  gripper_body.STL
lego_robot_description/meshes/table/: table.STL
lego_robot_description/urdf/: gripper (copy).xacro  gripper.xacro  lego_bot.xacro  table.xacro  ur5.urdf.xacro
rob6_lego/: CMakeLists.txt  package.xml
rob6_lego/commander/calib/: lego_calibration.yaml
rob6_lego/commander/src/: contol2.cpp  test_this2.cpp
robot_model/: package.xml
robot_model/launch/: display.launch  upload.launch
robot_model/meshes/gripper/: ee1.STL  g1.STL  g1_2.STL  g2.STL  g2_2.STL  gripper_body.STL
robot_model/urdf/: gripper.xacro  lego_bot.xacro  table.xacro  ur5.urdf.xacro
solution/: CMakeLists.txt  package.xml
solution/launch/: cam.launch  data.extractor.launch
solution/msg/: placeholder.txt
solution/src/: data_extractor.cpp  marker_detection_old.cpp
solution/srv/: GetMarker.srv
vision_lego/: CMakeLists.txt  package.xml
vision_lego/launch/: all.launch  cam.launch  data_extractor.launch  octomapper.launch  octomapping.launch
vision_lego/markers/: .~lock.test_0.odg#  csv_output.csv  test_0.odg
vision_lego/msg/: MarkerFound.msg  RPY.msg  TransformRPYStamped.msg
vision_lego/src/: data_extractor.cpp  marker_detect.cpp
